@@ -10,13 +10,11 @@ Known issues:
        and which not, like NEXT does. Log::Log4perl needs to be fixed and the
        problem should be described in Upgrading.pod. (rafl)
 
-     - CatalystX-CRUD-ModelAdapter-DBIC
-       fail tests against 5.80 (karpet)
-
      - Waiting on new releases:
        - Catalyst::Plugin::Authentication - 0.100092
        - Catalyst::Action::RenderView     - 0.08
        - Catalyst::Plugin::DebugCookie    - 0.999002
+       - CatalystX::CRUD                  - 0.38
 
 Documentation:
 
